<resources>
    <string name="app_name">AMAP</string>
    <string name="home_text">Bienvenue sur l\'application officielle de l\'AMAP</string>
    <string name="select_item">Choisissez le type de produits</string>
    <string name="text_new">Passer une nouvelle commande</string>
    <string name="panier1">Fruits</string>
    <string name="panier2">Légumes</string>
    <string name="fruit">Pains</string>
    <string name="oeufs">Oeufs</string>
    <string name="miel">Miel</string>
    <string name="panier_petit">Panier 5€</string>
    <string name="panier_grand">Panier 10€</string>
    <string name="fruits">Paniers de fruits au choix</string>
    <string name="text_history">Consulter l\'historique des commandes</string>
    <string name="count_intial">0</string>
    <string name="remove_one">Removes one item from bag</string>
    <string name="valider">Valider</string>
    <string name="add_one">Add one item to the bag</string>
    <string name="panier_2">Panier de fruits 2 personnes</string>
    <string name="panier_1">Panier de fruits 1 personne</string>
    <string name="commandez_vos_fruits">Commandez vos fruits.</string>
    <string name="commandez_vos_legumes">Commandez vos légumes</string>
    <string name="commandez_vos_oeufs">Commandez vos oeufs</string>
    <string name="commandez_votre_pain">Commandez votre pain</string>
    <string name="commandez_votre_miel">Commandez votre miel</string>
    <string name="home">Home</string>
    <string name="consultez_vos_commandes">Consultez vos commandes</string>
    <string name="effectuez_une_commande">Effectuez une commande</string>
    <string name="broccoli">broccoli</string>
    <string name="apple">apple</string>
    <string name="leek">leek</string>
</resources>