<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectItem">

    <TextView
        android:id="@+id/home_text"
        android:layout_width="242dp"
        android:layout_height="180dp"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/select_item"
        android:textAlignment="center"
        android:textColor="#428707"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_text"
        app:srcCompat="@drawable/panier1" />

    <TextView
        android:id="@+id/text_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/panier1"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/imageButton6"
        app:layout_constraintStart_toStartOf="@+id/imageButton6"
        app:layout_constraintTop_toBottomOf="@+id/imageButton6" />

    <TextView
        android:id="@+id/text_new3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/oeufs"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/imageButton8"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/imageButton8"
        app:layout_constraintTop_toBottomOf="@+id/imageButton8" />

    <TextView
        android:id="@+id/text_new5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/miel"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/imageButton12"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="@+id/imageButton12"
        app:layout_constraintTop_toBottomOf="@+id/imageButton12" />

    <TextView
        android:id="@+id/text_new4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/pain"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/imageButton10"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="@+id/imageButton10"
        app:layout_constraintTop_toBottomOf="@+id/imageButton10" />

    <TextView
        android:id="@+id/text_new2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/panier2"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/imageButton7"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="@+id/imageButton7"
        app:layout_constraintTop_toBottomOf="@+id/imageButton7" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="88dp"
        android:layout_height="91dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        android:contentDescription="Légumes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_text"
        app:srcCompat="@drawable/panier2" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton6"
        app:srcCompat="@drawable/egg" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton7"
        app:srcCompat="@drawable/bread" />

    <ImageButton
        android:id="@+id/imageButton12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton8"
        app:srcCompat="@drawable/honey" />
</androidx.constraintlayout.widget.ConstraintLayout>