<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/button_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_new"
        app:srcCompat="@drawable/history" />

    <ImageView
        android:id="@+id/button_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_text"
        app:srcCompat="@drawable/new_command" />

    <TextView
        android:id="@+id/home_text"
        android:layout_width="242dp"
        android:layout_height="180dp"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/home_text"
        android:textAlignment="center"
        android:textColor="#428707"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/text_new"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_new" />

    <TextView
        android:id="@+id/text_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/text_history"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_history" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="228dp"
        android:layout_height="204dp"
        android:layout_marginStart="-50dp"
        android:layout_marginBottom="-70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/broccoli" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="170dp"
        android:layout_height="164dp"
        android:layout_marginEnd="-50dp"
        android:layout_marginBottom="-30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/apple" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="251dp"
        android:layout_height="397dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="-90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/leek" />

</androidx.constraintlayout.widget.ConstraintLayout>