<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/validate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectItem">

    <TextView
        android:id="@+id/home_text"
        android:layout_width="242dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/fruits"
        android:textAlignment="center"
        android:textColor="#428707"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/white"
        android:onClick="launchFruitActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_text"
        app:srcCompat="@drawable/panier1" />

    <TextView
        android:id="@+id/text_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/panier_petit"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/imageButton6"
        app:layout_constraintStart_toStartOf="@+id/imageButton6"
        app:layout_constraintTop_toBottomOf="@+id/imageButton6" />

    <TextView
        android:id="@+id/text_new3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/panier_grand"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/imageButton8"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/imageButton8"
        app:layout_constraintTop_toBottomOf="@+id/imageButton8" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plus"
        app:srcCompat="@drawable/panier1" />

    <ImageButton
        android:id="@+id/plus"
        android:layout_width="42dp"
        android:layout_height="27dp"
        android:layout_marginEnd="140dp"
        android:backgroundTint="@color/white"
        android:onClick="countUp"
        android:rotation="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_new"
        app:srcCompat="@android:drawable/ic_menu_add" />/>

    <ImageButton
        android:id="@+id/less"
        android:layout_width="42dp"
        android:layout_height="27dp"
        android:layout_marginStart="140dp"
        android:backgroundTint="@color/white"
        android:onClick="countDown"
        android:rotation="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_new"
        app:srcCompat="@android:drawable/ic_menu_delete" />/>

    <TextView
        android:id="@+id/show_count"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/count_intial"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/plus"
        app:layout_constraintStart_toEndOf="@+id/less"
        app:layout_constraintTop_toBottomOf="@+id/text_new" />

    <ImageButton
        android:id="@+id/plus2"
        android:layout_width="42dp"
        android:layout_height="27dp"
        android:layout_marginEnd="140dp"
        android:backgroundTint="@color/white"
        android:onClick="countUp2"
        android:rotation="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_new3"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <ImageButton
        android:id="@+id/less2"
        android:layout_width="42dp"
        android:layout_height="27dp"
        android:layout_marginStart="140dp"
        android:backgroundTint="@color/white"
        android:onClick="countDown2"
        android:rotation="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_new3"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <TextView
        android:id="@+id/show_count2"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/count_intial"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/plus2"
        app:layout_constraintStart_toEndOf="@+id/less2"
        app:layout_constraintTop_toBottomOf="@+id/text_new3" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:text="Valider"
        android:onClick="launchItem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>